<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/login_view"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/choose_login_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook"
            android:drawableLeft="@drawable/com_facebook_button_icon_white"
            android:backgroundTint="@color/com_facebook_blue"
            android:textColor="#fff"
            style="@style/login_button_style"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_google"
            android:layout_marginTop="-6dp"
            android:drawableLeft="@drawable/ic_google"
            android:drawableTint="#888"
            android:backgroundTint="#fff"
            style="@style/login_button_style"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</FrameLayout>